--- a/EditCommandes.html
+++ b/EditCommandes.html
@@ -227,7 +227,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-pushpin">&ensp;</span> Séance n°1 <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li class="dropdown-header"><a href="ListeClients.html">Liste des clients</a></li>
+                  <li class="dropdown-header"><a href="ListeClients.html">Liste des Clients</a></li>
                   <li class="dropdown-header"><a href="ListeArticles.html">Liste des articles</a></li>
                   <!--  <li class="dropdown-header"><a href="page-per-country.html">Pages des bières pour un pays</a></li>
                   <li class="dropdown-header"><a href="page-per-filter.html">Recherche de bières</a></li>-->
